--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+Welcome to Home Page 
+
+
 
 <div class="posts">
   {% for post in site.posts %}
@@ -12,7 +15,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+     
     </article>
   {% endfor %}
 </div>
