--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@ layout: default
 ---
 
  
-
-<code>
+<pre>
 git clone https://github.com/rfd3344/rfd3344.github.io
 git add .
 git commit -m "注释"
 git remote add origin git@github.com:YotrolZ/helloTest.git
 git push -u origin master
-</code>
+</pre>
 
 <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing"> Google Temporary Folder </a>
 <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
