--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@ git commit -m "注释"
 git push -u origin master
 </pre>
 
-
 <section id="MyFiles">
-<a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing"> Google Temporary Folder </a>
-<a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
+<div>
+	<a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing"> Google Temporary Folder </a>
+</div>
+<div>
+	<a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
+</div>
 </section>
