--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ git commit -m "注释"
 git push -u origin master
 </pre>
 
-<section id="MyFiles">
+<section id="GitGoogle">
 <div>
 	<a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing"> Google Temporary Folder </a>
 </div>
