--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 layout: page
 ---
 
- 
+<section>
 <pre>
 git clone https://github.com/rfd3344/rfd3344.github.io
 git add .
 git commit -m "注释"
 git push -u origin master
 </pre>
+</section>
 
 <section id="GitGoogle">
    <div>
@@ -17,4 +18,12 @@ git push -u origin master
    <div>
       <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
    </div>
+</section>
+
+<section> 
+   section3
+</section>
+
+<section> 
+   section4
 </section>
