--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,5 +19,8 @@ layout: default
 
 
 {% for post in site %}
-    1.   {{ post }} <br>
+    2   {{ post }} <br>
+<script>
+  console.log(post);
+</script>
 {% endfor %}
