--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,6 +21,6 @@ layout: default
 {% for post in site %}
     2   {{ post }} <br>
 <script>
-  console.log(post);
+  console.log( {{post}} ) ;
 </script>
 {% endfor %}
