--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,7 +19,7 @@ layout: default
 
 
 {% for post in site %}
-    2   {{ post }} <br>
+    3.   {{ post }} <br>
 <script>
   console.log( {{post}} ) ;
 </script>
