--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,7 +18,7 @@ layout: default
 </div>
 
 
-{% for post in site %}
+{% for post in site.posts %}
     3.   {{ post }} <br>
 <script>
   console.log( {{post}} ) ;
