--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: page
 ---
 
+<div id='homePage' >
+
 <section>
 <pre>
 git clone https://github.com/rfd3344/rfd3344.github.io
@@ -27,3 +29,5 @@ git push -u origin master
 <section> 
    section4
 </section>
+
+</home>
