--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ git push -u origin master
 <section> 
    
 
-<form action="https://formspree.io/your@email.com"
+<form action="https://formspree.io/rfd3344@gmail.com"
       method="POST">
     <input type="text" name="name">
     <input type="email" name="_replyto">
