--- a/index.html
+++ b/index.html
@@ -23,21 +23,15 @@ git push -u origin master
 </section>
 
 <section> 
-   <form action="https://formspree.io/your@email.com"
-      method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
-</form>
+  
 </section>
 
 <section> 
    
 
-<form action="https://formspree.io/rfd3344@gmail.com"
-      method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
+<form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
+    <input type="text" name="name" placeholder="Message">
+    <input type="email" name="_replyto" placeholder="Email" >
     <input type="submit" value="Send">
 </form>
 
