--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ git push -u origin master
 </section>
 
 <section> 
-   <h1> Send Email To rfd3344@gmail.com </h1>
+   <h1> Send Email To Me</h1>
 <form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
     <input type="text" name="name" placeholder="Message">
     <input type="email" name="_replyto" placeholder="Email" >
