--- a/index.html
+++ b/index.html
@@ -29,10 +29,19 @@ git push -u origin master
 <section> 
    <h1> Send Email To Me</h1>
 <form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
-    <input type="text" name="name" placeholder="Message">
-    <input type="email" name="_replyto" placeholder="Email" >
+    <input type="hidden" name="_next" value="https://rfd3344.github.io/index.html" />
+    <input type="hidden" name="_language" value="zh-CN" />
+    <input type="hidden" name="_format" value="plain" />
+
+
+
+    <input type="text" name="_replyto" placeholder="Your email" />
+    <input  name="_subject" value="Subject" />
+    <input  type="text" name="name" placeholder="Name"/>
+    <textarea  type="text" name="Message" placeholder="Message" ></textarea>
     <input type="submit" value="Send">
 </form>
+
 
 </section>
 
