--- a/pages/test.html
+++ b/pages/test.html
@@ -1,5 +1,11 @@
+---
+layout: default
+---
+  
 
-  <style>
+
+
+<style>
   #draggable { width: 150px; height: 150px; padding: 0.5em; }
   </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
