--- a/index.html
+++ b/index.html
@@ -13,20 +13,14 @@ git push -u origin master
 </pre>
 </section>
 
-<section id="GitGoogle">
-   <div>
-      <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing"> Google Temporary Folder </a>
-   </div>
-   <div>
-      <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
-   </div>
-</section>
-
 <section> 
-  
+
 </section>
 
 <section id="ContactForm"> 
+   <a id="Phone" href="tel:+610451950926">Call Me?
+      
+   </a>
    <h1> Contact Me by Email</h1>
    <form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
       <input type="hidden" name="_next" value="https://rfd3344.github.io/index.html" />
@@ -40,5 +34,14 @@ git push -u origin master
       <input type="submit" value="Send">
    </form>
 </section>
+
+<section id="GitGoogle">
+   <div>
+      <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing">Google Temporary Folder </a>
+   </div>
+   <div>
+      <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
+   </div>
+</section>   
 
 </div>
