--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@ git push -u origin master
 
 </section>
 
-<section id="ContactForm"> 
+<section id="ContactMe"> 
    <a id="Phone" href="tel:+610451950926">Call Me?
       
    </a>
+   <div  id="EmailForm"> 
    <h1> Contact Me by Email</h1>
    <form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
       <input type="hidden" name="_next" value="https://rfd3344.github.io/index.html" />
@@ -33,6 +34,7 @@ git push -u origin master
       <textarea  type="text" name="Message" placeholder="Message" ></textarea>
       <input type="submit" value="Send">
    </form>
+   </div>
 </section>
 
 <section id="GitGoogle">
