--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@ git push -u origin master
 
 
    
-   
-<section id="GitGoogle">
-   <div>
-      <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing">Google Temporary Folder </a>
-   </div>
-   <div>
-      <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
-   </div>
-</section>   
+    
 
 <section id="ContactMe"> 
    <div  id="EmailForm"> 
@@ -39,9 +31,22 @@ git push -u origin master
       <input type="submit" value="Send">
    </form>
    </div>
-   <a id="Phone" href="tel:+610451950926">Call Me?   
+   <a id="Phone" href="tel:+610451950926">
+      <img src="{{ site.baseurl }}/images/ContactIcon.svg" width="100%"  />
+      Call Me?   
+      
    </a>
 </section> 
+   
+ 
+<section id="GitGoogle">
+   <div>
+      <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing">Google Temporary Folder </a>
+   </div>
+   <div>
+      <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
+   </div>
+</section>    
    
    
    
