--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ git push -u origin master
       <input type="hidden" name="_language" value="en" />
       <input type="hidden" name="_format" value="plain" />
       <input type="text" name="_replyto" placeholder="Your email" />
-      <input  name="_subject" value="Subject" />
+      <input  name="_subject" placeholder="Subject" />
       <input  type="text" name="name" placeholder="Name"/>
       <textarea  type="text" name="Message" placeholder="Message" ></textarea>
       <input type="submit" value="Send">
