--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ git push -u origin master
 
 <section id="ContactMe"> 
    <div  id="EmailForm"> 
-   <h1> Contact Me by Email</h1>
+   <h1> Send Email</h1>
    <form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
       <input type="hidden" name="_next" value="https://rfd3344.github.io/index.html" />
       <input type="hidden" name="_language" value="en" />
