--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ git push -u origin master
       <input type="hidden" name="_next" value="https://rfd3344.github.io/index.html" />
       <input type="hidden" name="_language" value="en" />
       <input type="hidden" name="_format" value="plain" />
-      <input type="text" name="_replyto" placeholder="Your email" />
-      <input  name="_subject" placeholder="Subject" />
-      <input  type="text" name="name" placeholder="Name"/>
-      <textarea  type="text" name="Message" placeholder="Message" ></textarea>
+      <input type="text" name="_replyto" placeholder="Email Address" required />
+      <input type="text" name="phone" placeholder="Contact Number" />
+      <input name="_subject" placeholder="Subject" />
+      <input type="text" name="name" placeholder="Name"/>
+      <textarea  type="text" name="Message" placeholder="Message" required ></textarea>
       <input type="submit" value="Send">
    </form>
    </div>
