--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ git push -u origin master
    </form>
    </div>
    <a id="Phone" href="tel:+610451950926">
-      <p>Call Me?</p>
+      <h1> Send Email</h1>
       <img src="{{ site.baseurl }}/images/ContactIcon.svg" width="50%"  />
       
       
