--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@ git push -u origin master
    </form>
    </div>
    <a id="Phone" href="tel:+610451950926">
-      <h1> Send Email</h1>
-      <img src="{{ site.baseurl }}/images/ContactIcon.svg" width="50%"  />
-      
-      
+      <h3> Call Me</h3>
+      <img src="{{ site.baseurl }}/images/ContactIcon.svg" width="50%" />
    </a>
 </section> 
    
