--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,7 +9,7 @@ layout: page
       <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
       <img src="{{ post.image }}"  />
       <div class="contents">
-        {{ post.excerpt.length() }}
+        {{ post.excerpt }}
       </div>
       <a href="{{ site.baseurl }}{{ post.url }}" > Read More </a>
     </article>
