--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@ git push -u origin master
       <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing">Google Temporary Folder </a>
    </div>
    <div>
-      <a href="https://github.com/rfd3344/rfd3344.github.io">Edit Github Contents </a>
+      <a href="http://prose.io/#rfd3344/rfd3344.github.io">Edit On Prose </a>
    </div>
-</section>    
-   
-   
+</section>
    
    
    
