--- a/pages/colortable.html
+++ b/pages/colortable.html
@@ -11,6 +11,7 @@ published: true
    width: 100%;
    margin: 0 auto;
    text-align: center;
+   max-width: unset;
 }
 #ColorTable div{
 	width: 100px;
@@ -206,6 +207,3 @@ published: true
 "></div><div style="background:	YellowGreen
 "></div>
 </section >
-
-
-
