--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 published: true
 ---
 
-<div id='HomePage' >
+<main id='HomePage' >
 
 <section>
 <pre>
@@ -51,4 +51,4 @@ git push -u origin master
  
    
    
-</div>
+</main>
