--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@ git push -u origin master
 
 <section id="ContactMe"> 
    <div  id="EmailForm"> 
-   <h3> Send Email</h3>
    <form action="https://formspree.io/rfd3344@gmail.com"  method="POST">
       <input type="hidden" name="_next" value="https://rfd3344.github.io/index.html" />
       <input type="hidden" name="_language" value="en" />
@@ -39,7 +38,7 @@ git push -u origin master
       <input name="_subject" placeholder="Subject" />
       <input type="text" name="name" placeholder="Name"/>
       <textarea  type="text" name="Message" placeholder="Message" required ></textarea>
-      <input type="submit" value="Send">
+      <input type="submit" value="Send Email">
    </form>
    </div>
    <a id="Phone" href="tel:+610451950926">
