--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ git push -u origin master
 
 <section id="GitGoogle">
    <div>
-      <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing">Google Temporary Folder </a>
+      <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing" target="_blank">Google Temporary Folder </a>
    </div>
    <div>
-      <a href="http://prose.io/#rfd3344/rfd3344.github.io">Edit On Prose </a>
+      <a href="http://prose.io/#rfd3344/rfd3344.github.io" target="_blank">Edit On Prose </a>
    </div>
 </section>
       
