--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@ git clone https://github.com/rfd3344/rfd3344.github.io
 git add .
 git commit -m "注释"
 git push -u origin master
+
+
+ Boot the computer from it and when Cr OS Linux is loaded, click Live Installer on the desktop. Follow the instructions on the screen.
+
+User password: user
+Root password: root
 </pre>
 </section>
 
