--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ git push -u origin master
       <a href="https://drive.google.com/drive/folders/0B4hURf1yuAzuWUM4bk5oZ0Z3YXc?usp=sharing" target="_blank">Google Temporary Folder </a>
    </div>
    <div>
-      <a href="http://prose.io/#rfd3344/rfd3344.github.io" target="_blank">Edit On Prose </a>
+      <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
    </div>
 </section>
       
